# pipeline_integrity_assessment_test

./: README.md  pyproject.toml  render.yaml  requirements.txt  start_gui.bat  start_gui_no_login.bat
data/: calculation_method.json  users.json
docs/: calculation_methodology.md  ili_fea_validation_summary.md  live_website_deployment.md
examples/: sample_case.json
outputs/: Automated_ILI_to_FEA_Methodology_White_Paper Rev.0.docx  Automated_ILI_to_FEA_Validation_White_Paper.docx  ili_fea_comprehensive_a11y.json  ili_validation_a11y.json  pmc8953741.xml  whitepaper_a11y.json  ~$tomated_ILI_to_FEA_Comprehensive_Validation_White_Paper.docx  ~$tomated_ILI_to_FEA_Methodology_White_Paper.docx
src/cepa_crossing/: __init__.py  api.py  calculator.py  cli.py  gui_server.py  models.py
tests/: gui_smoke.mjs  test_calculator.py  test_gui_server.py
tools/: build_ili_fea_comprehensive_whitepaper.py  build_ili_fea_validation_whitepaper.py  build_ili_fea_whitepaper.py
web/: app.js  ili-fea-3d.js  index.html  styles.css
