[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cepa-crossing"
version = "0.1.0"
description = "CEPA-style buried pipeline vehicle crossing hoop stress calculator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
license = { text = "MIT" }

[project.scripts]
cepa-crossing = "cepa_crossing.cli:main"
cepa-crossing-gui = "cepa_crossing.gui_server:main"

[tool.setuptools.packages.find]
where = ["src"]
